--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@vitejs/plugin-vue": "^4.3.1",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
+    "@vueuse/core": "^10.6.0",
     "animate.css": "^4.1.1",
     "audiomotion-analyzer": "^4.3.0",
     "electron": "^27.0.3",
