--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
-appId: com.muviz.Muviz
-productName: Muviz
+appId: com.muwviz.Muwviz
+productName: Muwviz
 directories:
   buildResources: build
 files:
@@ -12,7 +12,7 @@ files:
 asarUnpack:
   - resources/**
 win:
-  executableName: muviz
+  executableName: muwviz
 nsis:
   artifactName: ${name}-${version}-setup.${ext}
   shortcutName: ${productName}
