--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vueuse/core": "^10.6.0",
     "animate.css": "^4.1.1",
+    "audio-decode": "^2.2.0",
     "audiomotion-analyzer": "^4.3.0",
+    "d3": "^7.8.5",
     "electron": "^27.0.3",
     "electron-builder": "^24.6.3",
     "electron-vite": "^1.0.27",
@@ -64,6 +66,7 @@
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
     "vue-tsc": "^1.8.8",
-    "vue-virtual-scroller": "^2.0.0-beta.8"
+    "vue-virtual-scroller": "^2.0.0-beta.8",
+    "waveform-data": "^4.4.0"
   }
 }
