--- a/package.json
+++ b/package.json
@@ -22,9 +22,7 @@
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
-    "@electron-toolkit/utils": "^2.0.0",
-    "electron-log": "^5.0.0-rc.1",
-    "electron-typescript-ipc": "^3.0.0"
+    "@electron-toolkit/utils": "^2.0.0"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config": "^1.0.1",
@@ -44,6 +42,8 @@
     "d3": "^7.8.5",
     "electron": "^27.0.3",
     "electron-builder": "^24.6.3",
+    "electron-log": "^5.0.1",
+    "electron-typescript-ipc": "^3.0.0",
     "electron-vite": "^1.0.27",
     "eslint": "^8.52.0",
     "eslint-plugin-vue": "^9.17.0",
@@ -62,7 +62,6 @@
     "vite": "^4.4.9",
     "vite-svg-loader": "^5.1.0",
     "vue": "^3.3.7",
-    "vue-final-modal": "^4.4.5",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
     "vue-tsc": "^1.8.8",
