--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "muwviz",
-  "version": "1.0.0",
+  "version": "0.9.0",
+  "private": true,
+  "author": "antimacho612",
   "description": "An Electron application with Vue and TypeScript",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/antimacho612/Muwviz.git"
+  },
   "main": "./out/main/index.js",
-  "author": "example.com",
-  "homepage": "https://www.electronjs.org",
   "scripts": {
     "format": "prettier --write .",
     "lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts,.vue --fix",
@@ -40,10 +44,11 @@
     "audio-decode": "^2.2.0",
     "audiomotion-analyzer": "^4.3.0",
     "d3": "^7.8.5",
-    "electron": "^27.0.3",
+    "electron": "^28.1.1",
     "electron-builder": "^24.6.3",
-    "electron-log": "^5.0.1",
+    "electron-log": "^5.0.3",
     "electron-typescript-ipc": "^3.0.0",
+    "electron-updater": "^6.1.7",
     "electron-vite": "^1.0.27",
     "eslint": "^8.52.0",
     "eslint-plugin-vue": "^9.17.0",
@@ -52,16 +57,17 @@
     "jimp": "^0.22.10",
     "js-xxhash": "^3.0.0",
     "modern-css-reset": "^1.4.0",
-    "music-metadata": "^7.13.5",
+    "music-metadata": "^7.14.0",
     "pinia": "^2.1.7",
     "prettier": "^3.0.2",
     "primeflex": "^3.3.1",
     "sass": "^1.69.5",
+    "toad-scheduler": "^3.0.0",
     "typescript": "^5.1.6",
-    "v-wave": "^1.5.1",
+    "v-wave": "^2.0.0",
     "vite": "^4.4.9",
     "vite-svg-loader": "^5.1.0",
-    "vue": "^3.3.7",
+    "vue": "^3.4.4",
     "vue-history-state": "^0.14.0",
     "vue-router": "^4.2.5",
     "vue-toastification": "^2.0.0-rc.5",
