--- a/package.json
+++ b/package.json
@@ -19,10 +19,8 @@
     "dev": "electron-vite dev",
     "dev:watch": "electron-vite dev --watch",
     "build": "npm run typecheck && electron-vite build",
-    "postinstall": "electron-builder install-app-deps",
-    "build:win": "npm run build && electron-builder --win --config",
-    "build:mac": "npm run build && electron-builder --mac --config",
-    "build:linux": "npm run build && electron-builder --linux --config"
+    "build:electron": "npm run build && electron-builder -mwl --config",
+    "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
