--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "dev": "electron-vite dev",
     "dev:watch": "electron-vite dev --watch",
     "build": "npm run typecheck && electron-vite build",
-    "build:electron": "npm run build && electron-builder -mwl --config",
+    "build:win": "npm run build && electron-builder --win --config",
+    "build:mac": "npm run build && electron-builder --mac --config",
+    "build:linux": "npm run build && electron-builder --linux --config",
     "postinstall": "electron-builder install-app-deps"
   },
   "dependencies": {
