--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.9.0",
   "private": true,
   "author": "antimacho612",
-  "description": "An Electron application with Vue and TypeScript",
+  "description": "A desktop music player with visualizers.",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/antimacho612/Muwviz.git"
